fix(style): collapse NavBar by default

--- a/src/styles.css
+++ b/src/styles.css
@@ -224,7 +224,6 @@ select {
 .content {
   flex-grow: 1;
   padding: 20px;
-  margin-left: 250px; /* Коли NavBar розгорнутий */
   transition: margin-left 0.5s ease-in-out;
 }
 
